fixed Room amenities gaps

--- a/src/styles/components/amenities.less
+++ b/src/styles/components/amenities.less
@@ -13,12 +13,12 @@ amenities-list,
 //- Amenity
 amenity-item,
 .amenity-item {
-  padding: @baseline/2 @baseline * 2;
+  padding: 0 @baseline * 2;
   display: block;
   width: 33.3333%;
   float: left;
   box-sizing: border-box;
-  min-height: 65px;
+  min-height: 70px;
   font-weight: 500;
 
   .viewport-mobile &{
